--- a/autolink-frontend/src/app/pages/registro/registro.html
+++ b/autolink-frontend/src/app/pages/registro/registro.html
@@ -1,1 +1,24 @@
-<p>registro works!</p>
+<div class="registro-container">
+  <div class="registro-card">
+    <h2>Crear Cuenta</h2>
+
+    <label>Nombre</label>
+    <input type="text" />
+
+    <label>Apellidos</label>
+    <input type="text" />
+
+    <label>Email</label>
+    <input type="email" />
+
+    <label>Contraseña</label>
+    <input type="password" />
+
+    <label>Teléfono</label>
+    <input type="text" />
+
+    <button>Registrarse</button>
+
+    <p class="login">¿Ya tienes cuenta? <a routerLink="/login">Inicia sesión</a></p>
+  </div>
+</div>
