--- a/autolink-frontend/src/app/core/cabecera/cabecera.css
+++ b/autolink-frontend/src/app/core/cabecera/cabecera.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 /* Contenedor general de la cabecera */
 .cabecera {
   background-color: #2c2c2c; /* Gris oscuro */
