--- a/autolink-frontend/src/app/core/cabecera/cabecera.html
+++ b/autolink-frontend/src/app/core/cabecera/cabecera.html
@@ -8,12 +8,12 @@
     <!-- Menú de navegación -->
     <nav class="nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="vehiculos.html">Vehículos</a></li>
-        <li><a href="perfil.html">Perfil</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="registro.html">Registro</a></li>
+        <li><a routerLink="home">Home</a></li>
+        <li><a routerLink="catalogo">Catálogo</a></li>
+        <li><a routerLink="vehiculos">Vehículos</a></li>
+        <li><a routerLink="perfil">Perfil</a></li>
+        <li><a routerLink="login">Login</a></li>
+        <li><a routerLink="registro">Registro</a></li>
       </ul>
     </nav>
   </div>
