--- a/autolink-frontend/src/app/pages/login/login.html
+++ b/autolink-frontend/src/app/pages/login/login.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="login-container">
+  <div class="login-card">
+    <h2>Iniciar Sesión</h2>
+
+    <label>Email</label>
+    <input type="email" placeholder="ejemplo@correo.com" />
+
+    <label>Contraseña</label>
+    <input type="password" placeholder="••••••••" />
+
+    <button>Entrar</button>
+
+    <p class="registro">¿No tienes cuenta? <a routerLink="/registro">Regístrate</a></p>
+  </div>
+</div>
