--- a/autolink-frontend/src/app/pages/registro/registro.html
+++ b/autolink-frontend/src/app/pages/registro/registro.html
@@ -19,6 +19,6 @@
 
     <button>Registrarse</button>
 
-    <p class="login">¿Ya tienes cuenta? <a routerLink="/login">Inicia sesión</a></p>
+    <p class="login">¿Ya tienes cuenta? <a href="/login">Inicia sesión</a></p>
   </div>
 </div>
