--- a/autolink-frontend/src/app/pages/login/login.html
+++ b/autolink-frontend/src/app/pages/login/login.html
@@ -10,6 +10,6 @@
 
     <button>Entrar</button>
 
-    <p class="registro">¿No tienes cuenta? <a routerLink="/registro">Regístrate</a></p>
+    <p class="registro">¿No tienes cuenta? <a href="/registro">Regístrate</a></p>
   </div>
 </div>
